tests/ui/derives/clone-debug-dead-code-in-the-same-struct.stderr
error: struct `Whatever` is never constructed
  --> $DIR/clone-debug-dead-code-in-the-same-struct.rs:4:12
   |
LL | pub struct Whatever {
   |            ^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/clone-debug-dead-code-in-the-same-struct.rs:1:11
   |
LL | #![forbid(dead_code)]
   |           ^^^^^^^^^

error: aborting due to 1 previous error

